# C-Project-Base

./: CMakeLists.txt  README.md
src/: stopping.hpp
tests/: CMakeLists.txt  README.md  test_stopping.cpp
